@@ -1,6 +1,7 @@
 source 'https://rubygems.org'
 
+gem 'composer', '0.0.2'
 gem 'heirloom', '0.9.0'
-gem 'simple_deploy', '0.6.2'
+gem 'simple_deploy', '0.6.3'
 gem 'chef', '10.16.2'
 gem 'knife-solo_data_bag', '0.3.0'
